# SRS-synthesis

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  srs_conversion.py  srs_damped_sine_synthesis.py  srs_wavelet_synthesis.py  test_dss.py  test_ws.py
DSS_matlab_source_irvine/: DSS_scale_th.m  DSS_sintime.m  DSS_srs.m  DSS_srs_error.m  DSS_th_syn.m  DSS_waveform_reconstruction.m  DSS_wgen.m  add_pre_shock.m  damped_sine_syn.m  integrate_function.m  readme.txt  srs_coefficients.m
WS_matlab_source_irvine/: srs_coefficients.m  wavelet_synth_srs_plot.m  wavelet_synth_srs_plot_h.m  ws_gen_time.m  ws_max_param_alt_dv.m  ws_rankfunctions_kt.m  ws_rankfunctions_kt_np.m  ws_scale.m  ws_srs.m  ws_srs_error.m  ws_synth1.m  ws_synth3.m  ws_synth4.m  ws_synth_exp.m  ws_th_from_wavelet_table.m
examples/: analyze_DSS_run.py  analyze_WS_run.py  example_DSS_run_tom_irvine_case.py  example_WS_run_min_accel_case.py  example_WS_run_tom_irvine_case.py
srs_synthesis/: __init__.py  damped_sine.py  wavelet.py
tests/: __init__.py  test_damped_sine.py  test_wavelet.py
